Added messages to DOM

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,8 @@
     <title>Twitch Chat Manager</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="messages" id="messages"></div>
+    </div>
 </body>
 </html>
